# RenderMD-Tauri

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: check.yml  release.yml
crates/rendermd-core/: Cargo.toml
crates/rendermd-core/src/: diff.rs  emoji.rs  fsroot.rs  history.rs  images.rs  lib.rs  preprocess.rs  render.rs  template.rs
crates/rendermd-core/src/tables/: mod.rs  model.rs  parse.rs  paste.rs  render.rs  serialize.rs
packaging/aur/: PKGBUILD
src/: bridge.ts  dialogs.ts  editor.ts  main.ts  preview.ts  styles.css  toasts.ts  updater.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/assets/: PROVENANCE.md  mermaid.min.js.sha256
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  preview_protocol.rs  settings.rs  state.rs  watcher.rs
src-tauri/src/commands/: doc.rs  file.rs  history.rs  image.rs  link.rs  mod.rs  preview_msg.rs  table.rs
