[workspace]
resolver = "2"
members = ["crates/rendermd-core", "src-tauri"]

[workspace.package]
version = "2.0.0-beta.4"
edition = "2021"
license = "MIT"

[workspace.dependencies]
comrak = { version = "0.29", features = ["syntect"] }
pulldown-cmark = { version = "0.11", default-features = false }
csv = "1"
percent-encoding = "2"
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
