[package]
name = "rendermd"
description = "RenderMD — a cross-platform Markdown viewer/editor"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rendermd_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rendermd-core = { path = "../crates/rendermd-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde.workspace = true
serde_json.workspace = true
percent-encoding.workspace = true
chrono.workspace = true
tempfile = "3"
